2003-07-11  Dennis Cranston <dennis_cranston at yahoo com>

	Fixes for ui-review bug number 99533.
	
	* gnome-data/gtk-events-2.soundlist.in:  
	  s/Action button click/Click on command button,
	  s/Check box toggled/Select check box,
	  s/Menu item activation/Choose menu item.
	
	* gnome-data/gnome-2.soundlist.in:
	  s/GNOME system events/System events,
	  s/Error Messages/Error message,
	  s/Informational Messages/Informational message,
	  s/Login/Log in,
	  s/Logout/Log out,
	  s/Miscellaneous Messages/Miscellaneous message,
	  s/Question Dialogs/Question dialog,
	  s/Warning Messages/Warning message.

2003-07-10  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_postinit):
	* libgnome/gnome-score.c: (gnome_score_child): Merge
	fixes for bug #116794 + one more :)

2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* schemas/desktop_gnome_interface.schemas.in:
	Add default value for monospace font name
	(Patch by Owen Taylor).
	
2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* configure.in:
	Remove libxml and libxslt deps.
	
2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* Makefile.am:
	* configure.in:
	* help-converters/Makefile.am:
	* help-converters/README:
	* help-converters/docbook/.cvsignore:
	* help-converters/docbook/AUTHORS:
	* help-converters/docbook/Makefile.am:
	* help-converters/docbook/README:
	* help-converters/docbook/gnome-customization/.cvsignore:
	* help-converters/docbook/gnome-customization/Makefile.am:
	* help-converters/docbook/gnome-customization/gnome-custom.xsl:
	* help-converters/docbook/gnome-customization/gnome-customization.x
	sl:
	* help-converters/docbook/gnome-customization/l10n.xml:
	* help-converters/docbook/gnome-db2html3.c:
	* help-converters/gnome-vfs-module/.cvsignore:
	* help-converters/gnome-vfs-module/Makefile.am:
	* help-converters/gnome-vfs-module/help-method.c:
	* help-converters/gnome-vfs-module/help-method.h: